update get infos
