# src/app/api/v1/infos/infos-business.js
@@ -2,8 +2,28 @@ import infosRepository from "./infos-repository.js";
 
 const infosBusiness = {
   find: async (params) => {
-    const date = params.date ?? getDateTime().date;
-    return await infosRepository.find({ ...params, date });
+    if (params.filter != "day" && params.filter != "hours") {
+      return {
+        data: "Filter parameter is only value = day our hours",
+        status: 400,
+      };
+    } else if (
+      params.filter == "day" &&
+      (!params.initDate || !params.lastDate)
+    ) {
+      return {
+        data: "For filter = day, initDate and lastDate is required",
+        status: 400,
+      };
+    } else if (!params.equipmentSerialNumber) {
+      return { data: "equipment SerialNumber is required", status: 400 };
+    }
+    const lastDate =
+      params.filter == "hours" ? getDateTime().date : params.lastDate;
+    const initDate =
+      params.filter == "hours" ? getDateTime(true).date : params.initDate;
+
+    return await infosRepository.find({ ...params, lastDate, initDate });
   },
   create: async (infos) => {
     const dateTime = getDateTime();
@@ -15,8 +35,12 @@ const infosBusiness = {
   },
 };
 
-const getDateTime = () => {
+const getDateTime = (ontem = false) => {
   const dataHoraAtual = new Date();
+
+  if (ontem) {
+    dataHoraAtual.setDate(dataHoraAtual.getDate() - 1);
+  }
 
   const data = dataHoraAtual.toLocaleString("pt-BR", {
     timeZone: "America/Sao_Paulo",
